assets/main.css
/* ... */
.banner-text {
  width: 85%;
  margin: 0 auto;
  text-align: center;
  color: #fff;
  display: -ms-grid;
  display: grid;
  grid-template-columns: 33% 33% 33%;
  -ms-grid-columns: 33% 33% 33%;
  align-items: center;
  justify-items: center;
}


/* Banner [ articles, search, articles count ]
-------------------------------------------------------------- */
.sort-count {
  padding: 20px 0;
  display: -ms-grid;
  display: grid;
  grid-template-columns: 30% 50% 20%;
  -ms-grid-columns: 35% 40% 25%;
  font-weight: 600;
  background-color: var(--light-secondary);
  width: 70%;
  align-items: center;
  justify-items: center;
  margin: 0 auto;
}

.dark .sort-count {
  background-color: var(--dark-primary);
}

.sort-articles {
  padding: 8px 14px;
  color: var(--light-secondary-bg);
  border-radius: 5px;
  position: relative;
  left: -80px;
}

.sort-articles input {
  background-color: rgba(255, 255, 255, 0.1);
  color: inherit;
  border-radius: 5px;
  padding: 5px;
  margin: 3px;
}

.sort-articles input::placeholder {
  color: var(--light-secondary-bg);
  opacity: 0.7;
}

.sort-articles input:focus {
  outline: none;
}

.showing-articles {
  color: var(--light-secondary-bg);
  display: grid;
  grid-template-columns: 45% 65%;
  align-items: center;
  justify-items: center;
}

.post-count {
  color: var(--light-secondary-bg);
  text-align: right;
}

.no-focus input {
  width: 100%;
  display: inline;
  color: var(--light-secondary-bg);
}

.no-focus input::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: var(--light-secondary-bg);
  opacity: 1;
  /* Firefox */
}

.no-focus input:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: var(--light-secondary-bg);
}

.no-focus input::-ms-input-placeholder {
  /* Microsoft Edge */
  color: var(--light-secondary-bg);
}

.no-focus input:focus {
  outline: none !important;
}

/* Articles and Page Content
-------------------------------------------------------------- */
article i {
  color: rgba(95, 95, 95, 0.3);
}

article h1,
.pages h1 {
  font-size: 2rem;
  border-bottom: 1px dotted rgba(95, 95, 95, 0.3);
  color: var(--light-secondary);
  font-weight: 600;
}

.dark article h1,
.dark .pages h1 {
  color: var(--dark-title);
  border-bottom: 1px dotted rgba(255, 255, 255, 0.2);
}

.articles,
.sidebar,
.pages {
  background-color: var(--light-secondary-bg);
  padding: 10px;
  width: 100%;
  min-height: 175px;
  border-radius: 5px;
}

.dark .articles,
.dark .sidebar,
.dark .pages {
  background-color: var(--dark-secondary-bg);
}

.sidebar {
  margin-bottom: 4px;
}

.sidebar p {
  padding: 0 5px;
  font-size: 1rem;
  line-height: 1.8rem;
}

aside {
  width: 95%;
}

.sidebar-title {
  background-color: var(--light-primary);
  padding: 5px;
  color: var(--light-secondary-bg);
  font-size: 1rem;
  border-bottom: 1px dotted rgba(95, 95, 95, 0.3);
  text-align: center;
  font-weight: 600;
  border-radius: 5px;
}

.dark .sidebar-title {
  background-color: var(--dark-primary);
  color: var(--light-secondary-bg);
}

.article-title {
  font-size: 2rem;
}

.post-info {
  color: rgba(95, 95, 95, 0.5);
  text-transform: uppercase;
  font-size: 0.8rem;
  background-color: var(--light-bg);
  padding: 3px 10px;
  display: inline-block;
}

.dark .post-info {
  background-color: var(--dark-bg);
  color: rgba(255, 255, 255, 0.5)
}

.post-img {
  object-fit: cover;
  width: 100%;
  height: 350px;
}

.img-credit {
  background-color: rgba(255, 255, 255, 0.1);
  position: relative;
  padding: 3px 10px;
  color: var(--light-secondary-bg);
  top: -30px;
  left: 23px;
  display: inline-block;
}

.dark .img-credit {
  color: var(--light-secondary-bg);
}

.articles img {
  height: 100%;
  border-radius: 5px;
}

.post-title,
a.post-title {
  font-size: 1.4rem;
  font-weight: 600;
  color: var(--light-title);
}

.dark .post-title,
.dark a.post-title {
  color: var(--dark-title);
}

a.post-title:hover {
  text-decoration: underline;
}

.date {
  color: var(--light-primary);
  text-transform: uppercase;
  font-size: 0.8rem;
  font-weight: 600;
}

.dark .date {
  color: var(--dark-primary);
}

.tags {
  color: rgba(95, 95, 95, 0.3);
  text-transform: uppercase;
  font-size: 0.8rem;
  font-weight: 600;
  text-align: right;
  padding: 5px 10px;
}

.dark .tags {
  color: rgba(255, 255, 255, 0.3);
}


/* Articles Next Previous and Pagination
-------------------------------------------------------------- */
.article-next {
  text-align: right;
}

.article-previous {
  text-align: left;
}

a.article-next,
a.article-previous {
  background-color: var(--light-secondary-bg);
  padding: 5px;
  color: var(--light-secondary);
  margin: 5px;
  font-weight: 600;
}

.dark a.article-next,
.dark a.article-previous {
  background-color: var(--dark-secondary-bg);
  color: var(--dark-secondary);
}

a.article-next:after {
  content: "›";
}

a.article-previous:before {
  content: "‹";
}

.pagination-wrap {
  margin: 0 auto;
  width: 100%;
  text-align: center;
  margin: 20px 0;
}

#next a,
#prev-next a {
  background-color: var(--light-secondary-bg);
  padding: 5px 10px;
  display: inline-block;
  border-radius: 5px;
}

.dark #next a,
.dark #prev-next a {
  background-color: var(--dark-secondary-bg);
}

/* Search Results
-------------------------------------------------------------- */
ul.suggestions-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

ul.suggestions-list li:before {
  content: "✓";
  color: var(--light-primary);
  padding: 3px;
}

.dark ul.suggestions-list li:before {
  color: var(--dark-primary);
}

ul.suggestions-list li {
  display: block;
  border-bottom: 1px solid rgba(95, 95, 95, 0.1);
  padding: 4px;
}

/* Skillset
-------------------------------------------------------------- */
.skill-set {
  display: grid;
  grid-template-columns: 10% 10% 10% 10% 10% 10%;
  grid-gap: 3px;
  align-items: center;
  justify-content: center;
  margin: 4px;
}
/* ... */

